mobile overflow fix

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -83,3 +83,7 @@ svg.scatter-plot {
     cursor: pointer;
   }
 }
+
+#projects {
+  overflow: hidden;
+}
